2024-02-23T00:29:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8012894807 # 141
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-23
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 336 701 / 341 708
* notice: next accum: outdated-unq outdated-all / unq all: 337 703 / 341 709
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-02-08] / [2024-02-22]

2024-02-22T08:08:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8001298438 # 139
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-22
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 336 701 / 340 707
* notice: next accum: outdated-unq outdated-all / unq all: 336 701 / 341 708
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-02-08 2024-02-22]

2024-02-22T00:29:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7997535402 # 138
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-22
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 335 699 / 340 706
* notice: next accum: outdated-unq outdated-all / unq all: 336 701 / 340 707
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-02-07] / [2024-02-21]

2024-02-21T08:09:17Z: