@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-23T00:29:36Z",
-  "count_outdated" : 703,
-  "uniques_outdated" : 337,
-  "count" : 709,
-  "uniques" : 341,
+  "timestamp" : "2024-02-23T08:09:03Z",
+  "count_outdated" : 704,
+  "uniques_outdated" : 338,
+  "count" : 710,
+  "uniques" : 342,
   "clones" : [
-    {
-      "timestamp": "2024-02-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-20T00:00:00Z",
       "count": 1,
@@ -37,6 +28,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
