@@ -3,11 +3,6 @@
   "uniques": 1,
   "clones": [
     {
-      "timestamp": "2024-02-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-02-20T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -20,6 +15,11 @@
     {
       "timestamp": "2024-02-22T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-02-23T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
